--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "products-catalog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -8,6 +8,10 @@
     "test": "jest"
   },
   "author": "Alexey Belyaev",
+  "engines": {
+    "node": ">=6.5",
+    "npm": ">=3.10"
+  },
   "dependencies": {
     "jquery": "~2.1.3",
     "underscore": "~1.7.0",
@@ -22,11 +26,9 @@
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
     "sequelize": "2.0.0-rc8",
-    "sequelize-cli": "~1.1.0",
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.4"
   },
   "devDependencies": {
-    "jest-cli": "^0.2.2"
   }
 }
